<?xml version="1.0" encoding="utf-8"?>

<!--TODO- clean this up and make values point to their home  -->

<resources>

    <string name="app_name">Angry Chimps</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="service_name">Service Name</string>
    <string name="discounted_price">Discounted Price</string>
    <string name="original_price">Original Price</string>
    <string name="service_duration">Minutes Required\nfor Service</string>
    <string name="service_time_notice">Minutes Notice\nRequired to Book</string>

    <string name="dollar_sign">$</string>
    <string name="from">From</string>
    <string name="available_time_blocks">Available Time Blocks</string>
    <string name="to">To</string>
    <string name="category">Category</string>
    <string name="add_time_block">Add Another Time Block</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="ad_detail_flag_listing">Flag this listing for review</string>
    <string name="popular_deals">Most Popular Deals Near You:</string>
    <string name="view_deal">View deal</string>
    <string name="title_map">Map</string>

    <string name="drawer_explore">Explore deals near you</string>
    <string name="drawer_messages">Messages</string>
    <string name="drawer_provider_mode">Provider mode</string>
    <string name="drawer_provider_create_ad_first">Create your 1st ad</string>
    <string name="drawer_provider_availability">Availability manager</string>
    <string name="drawer_provider_company_manager">Company profile manager</string>
    <string name="drawer_consumer_mode">Consumer mode</string>
    <string name="drawer_consumer_request_service">Request a service</string>
    <string name="drawer_consumer_notification_manager">Notification manager</string>
    <string name="drawer_rate_app">Rate this app</string>
    <string name="drawer_help">Help</string>
    <string name="drawer_logout">Logout</string>
    <string name="availability_set_notification">Set up a notification</string>
    <string name="availability_time_you_need">Don\'t see the time you need?</string>
    <string name="availability_select_notification_type">Select SMS, email, or push notifications</string>
    <string name="availability_select_a_time">Select a Time</string>


</resources>
