<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/drawer_shared_above"/>

    <FrameLayout
        style="@style/DrawerItem"
        android:background="@color/drawer_switch_background">

        <!--The colored strip on the left side of the navigation drawer -->
        <View style="@style/DrawerModeColorStrip.DkBlue"/>

        <TextView
            style="@style/DrawerText.DkBlue"
            android:layout_marginLeft="@dimen/default_margin"
            android:text="@string/drawer_provider_mode"
            android:textStyle="bold"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/drawer_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/default_margin"
            android:checked="true"
            android:onClick="onDrawerItemClicked"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/drawer_create_ad"
        style="@style/DrawerItem"
        android:background="@color/drawer_mode_background"
        android:onClick="onDrawerItemClicked">

        <View style="@style/DrawerModeColorStrip.DkBlue"/>

        <ImageView
            style="@style/DrawerIcon"
            android:src="@drawable/ic_add_dkblue_24dp"/>

        <TextView
            android:id="@+id/tv_drawer_create_ad"
            style="@style/DrawerText.DkBlue"
            android:text="@string/drawer_provider_create_ad_first"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/drawer_availability"
        style="@style/DrawerItem"
        android:background="@color/drawer_mode_background"
        android:onClick="onDrawerItemClicked">

        <View style="@style/DrawerModeColorStrip.DkBlue"/>

        <ImageView
            style="@style/DrawerIcon"
            android:src="@drawable/ic_avail_dkblue_24dp"/>

        <TextView
            style="@style/DrawerText.DkBlue"
            android:text="@string/drawer_provider_availability"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/drawer_company_profile"
        style="@style/DrawerItem"
        android:background="@color/drawer_mode_background"
        android:onClick="onDrawerItemClicked">

        <View style="@style/DrawerModeColorStrip.DkBlue"/>

        <ImageView
            style="@style/DrawerIcon"
            android:src="@drawable/ic_company_dkblue_24dp"/>

        <TextView
            style="@style/DrawerText.DkBlue"
            android:text="@string/drawer_provider_company_manager"/>
    </FrameLayout>

    <include layout="@layout/drawer_shared_below"/>

</LinearLayout>