<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/drawer_shared_above"/>

    <FrameLayout
        style="@style/DrawerItem"
        android:background="@color/drawer_switch_background">

        <!--The colored strip on the left side of the navigation drawer -->
        <View style="@style/DrawerModeColorStrip.Blue"/>

        <TextView
            style="@style/DrawerText.Blue"
            android:layout_marginLeft="@dimen/default_margin"
            android:text="@string/drawer_consumer_mode"
            android:textStyle="bold"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/drawer_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/default_margin"
            android:onClick="onDrawerItemClicked"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/drawer_request"
        style="@style/DrawerItem"
        android:background="@color/drawer_mode_background"
        android:onClick="onDrawerItemClicked">

        <View style="@style/DrawerModeColorStrip.Blue"/>

        <ImageView
            style="@style/DrawerIcon"
            android:src="@drawable/ic_request_blue_24dp"/>

        <TextView
            style="@style/DrawerText.Blue"
            android:text="@string/drawer_consumer_request_service"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/drawer_notifications"
        style="@style/DrawerItem"
        android:background="@color/drawer_mode_background"
        android:onClick="onDrawerItemClicked">

        <View style="@style/DrawerModeColorStrip.Blue"/>

        <ImageView
            style="@style/DrawerIcon"
            android:src="@drawable/ic_notification_blue_24dp"/>

        <TextView
            style="@style/DrawerText.Blue"
            android:text="@string/drawer_consumer_notification_manager"/>
    </FrameLayout>

    <include layout="@layout/drawer_shared_below"/>
</LinearLayout>